[package]
name = "parui"
description = "Simple TUI frontend for paru or yay."
version = "1.0.18"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Vonr/parui"
repository = "https://github.com/Vonr/parui"
keywords = ["tui", "terminal", "frontend", "paru"]
include = ["src/**/*", "README.md"]
rust-version = "1.71.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 0
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[dependencies]
atomic = "0.6.0"
parking_lot = "0.12.2"
nohash-hasher = "0.2.0"
compact_strings = "4.1.2"

[dependencies.crossterm]
version = "0.27.0"
default-features = false
features = ["events"]

[dependencies.tokio]
version = "1.37.0"
features = ["process", "rt-multi-thread", "time", "macros", "sync"]

[dependencies.tui]
package = "ratatui"
version = "0.26.2"
features = ["crossterm"]

[dependencies.ureq]
version = "2.9.7"

[dependencies.bytemuck]
version = "1.15.0"
features = ["derive"]

[dependencies.dhat]
version = "0.3.3"
optional = true

[dependencies.regex]
version = "1.10.4"
default-features = false
features = ["perf", "std"]

[features]
dhat = ["dep:dhat"]
