[package]
name = "parui"
description = "Simple TUI frontend for paru or yay."
version = "1.0.19"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Vonr/parui"
repository = "https://github.com/Vonr/parui"
keywords = ["tui", "terminal", "frontend", "paru"]
include = ["src/**/*", "README.md"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 0
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[dependencies]
atomic = "0.6"
parking_lot = "0.12"
nohash-hasher = "0.2"
compact_strings = "4"
flate2 = "1"

[dependencies.crossterm]
version = "0.29"
default-features = false
features = ["events"]

[dependencies.tokio]
version = "1"
features = ["process", "rt-multi-thread", "time", "macros", "sync"]

[dependencies.tui]
package = "ratatui"
version = "0.30"
features = ["crossterm"]

[dependencies.ureq]
version = "3"
default-features = false
features = ["rustls"]

[dependencies.bytemuck]
version = "1"
features = ["derive"]

[dependencies.dhat]
version = "0.3"
optional = true

[dependencies.regex]
version = "1"
default-features = false
features = ["perf", "std"]

[features]
dhat = ["dep:dhat"]
